Fixed alignment of name, IP, Port labels within add server

--- a/styles/ServerAdd.module.scss
+++ b/styles/ServerAdd.module.scss
@@ -24,9 +24,11 @@
       .errorDiv {
         font-size: 0.5rem;
         z-index: 1px;
-        // position: fixed;
       }
       label {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
         width: 20%;
       }
       input {
